--- a/Sass/all-var.scss
+++ b/Sass/all-var.scss
@@ -1,10 +1,10 @@
 //全局变量
 $love:deeppink;
+$endColor:#9EABB3;
 
 
 
-
-//代码片段
+//CSS片段
 @mixin border-radius($radius){
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
