--- a/Sass/reset.scss
+++ b/Sass/reset.scss
@@ -1,18 +1,16 @@
 @import "all-var";
 
-html{
-  @include user-select(none);
-  background: #DCDCDC;
-
-}
-body{
-  margin: 30px;
-
-}
 * {
   margin: 0;
   padding: 0;
 }
+html{
+  ::selection{
+    background: $endColor;
+  }
+  //@include user-select(none);
+}
+
 
 body {
   font: 16px "Microsoft YaHei";
@@ -20,6 +18,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
+  font-weight:normal;
 }
 
 i {
